@@ -1,3 +1,6 @@
+Upcoming:
+- Greatly improved the input of the environmental controller. It was very hard to type negative numbers
+
 1.19-5.0.2:
 - Fixed the tank updating when the contents changed
 
